fixed error display, added custom scrollbars

--- a/scss/_fromjs.scss
+++ b/scss/_fromjs.scss
@@ -17,3 +17,21 @@
    color: red;
    font-size: 10px;
 }
+
+#customDiv {
+   position: relative;
+
+   input {
+      padding-left: 25px;
+      height: 100%;
+   }
+
+   span {
+      position: absolute;
+      left: 10px;
+      bottom: 10px;
+      font-weight: bold;
+      font-size: 20px;
+      color: $grayishCyan;
+   }
+}
