--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
-@import 'reset';
 @import 'config';
 
 body {
@@ -8,11 +7,12 @@ body {
    background-color: $grayishCyan-l;
    font-family: $spaceMono;
 
-   & > img, #card {
+   &>img,
+   #card {
       margin: 0 auto;
    }
 
-   & > img {
+   &>img {
       margin-top: 3.5vh;
       margin-bottom: 40px;
       text-align: center;
@@ -32,11 +32,13 @@ body {
 
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 4.5%; grid-gap: 4.5%;
+      gap: 4.5%;
+      grid-gap: 4.5%;
 
       #input-screen {
 
-         .bill, .people {
+         .bill,
+         .people {
             display: grid;
             grid-template-columns: 1fr;
 
@@ -45,7 +47,7 @@ body {
                margin-bottom: 5px;
                font-weight: bold;
             }
-            
+
             input {
                background-color: $grayishCyan-ll;
                border-radius: 5px;
@@ -65,7 +67,8 @@ body {
             }
          }
 
-         .bill, .tip {
+         .bill,
+         .tip {
             margin-bottom: 30px;
          }
 
@@ -76,7 +79,7 @@ body {
                padding-left: 23.5px;
             }
 
-            span {
+            &>span {
                position: absolute;
                color: $grayishCyan;
                bottom: 7.5px;
@@ -98,6 +101,7 @@ body {
                bottom: 14.5px;
                left: 10px;
                font-size: 20px;
+               height: 15px;
             }
          }
 
@@ -108,10 +112,11 @@ body {
                font-weight: bold;
             }
 
-            & > div {
+            &>div {
                display: grid;
                grid-template-columns: repeat(3, 1fr);
-               gap: 10px; grid-gap: 10px;
+               gap: 10px;
+               grid-gap: 10px;
 
                button {
                   background-color: $darkCyan;
@@ -157,7 +162,8 @@ body {
          border-radius: 10px;
          padding: 7.5%;
          position: relative;
-         
+         overflow: auto;
+
          .tip-display {
             color: $white;
             display: flex;
@@ -166,16 +172,27 @@ body {
             margin-bottom: 20px;
             align-items: flex-end;
 
+            ul {
+               margin-right: 10px;
+            }
 
-            ul > li:last-child {
+            ul>li:last-child {
                font-size: 12px;
                color: $grayishCyan;
             }
 
             p {
                font-family: $spaceMono;
+               overflow-x: scroll;
                color: $strongCyan;
                font-size: 40px;
+
+               // -ms-overflow-style: none;
+               // scrollbar-width: none;
+
+               // &::-webkit-scrollbar {
+               //    display: none;
+               // }
 
                span {
                   margin: 0;
@@ -194,10 +211,10 @@ body {
             font-weight: bold;
             font-size: 18px;
             border: 0;
-            transition: .2s ease-in-out;               
+            transition: .2s ease-in-out;
             border: 2px solid transparent;
 
-            
+
             &:hover {
                background-color: $darkCyan;
                color: $strongCyan;
@@ -216,6 +233,27 @@ label {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
+}
+
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+   width: 20px;
+}
+
+::-webkit-scrollbar-track {
+   background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+   background-color: $strongCyan;
+   border-radius: 20px;
+   border: 7px solid transparent;
+   background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+   background-color: $grayishCyan-l;
 }
 
 @import 'fromjs';
